Correctly align tile footer

--- a/src/components/Activities/ActivityTile.css
+++ b/src/components/Activities/ActivityTile.css
@@ -26,6 +26,7 @@
 .activity-card footer {
   position: absolute;
   bottom: 0;
+  left: 0;
   width: 100%;
   font-size: 0.75em;
   font-weight: 700;
